feat: add signOutSSO method & support logout callback in test app

--- a/test/apps/app/public/logout/callback/index.html
+++ b/test/apps/app/public/logout/callback/index.html
@@ -9,7 +9,7 @@
   <div id="root"></div>
   <script src="/oidc-app.js"></script>
   <script type="text/javascript">
-    bootstrapLoginCallback();
+    bootstrapLogoutCallback();
   </script>
 </body>
 </html>
